--- a/src/assets/css/commonList.less
+++ b/src/assets/css/commonList.less
@@ -60,6 +60,29 @@
               width: 450px;
               box-sizing: border-box;
               padding-left: 20px;
+              .list-title {
+                display: flex;
+                flex-direction: row;
+                // 拼单标记样式
+                .share-box {
+                  padding: 0px;
+                  width: 40px;
+                  height: 40px;
+                  margin-left: 20px;
+                  background-color:rgba(255, 123, 0, 0.863);
+                  color: #fff;
+                  text-align: center;
+                  border-radius: 10px 0 10px 0;
+                  position: relative;
+                  .share-des {
+                    position: absolute;
+                    bottom: -8px;
+                    left: 41px;
+                    color: rgba(255, 68, 0, 0.89);
+                    font-size: 20px;
+                  }
+                }
+              }
               p{
                 word-break: break-all;
                 em{
